# NoteQuarry-QML

QT/: CMakeLists.txt  QT.qmlproject  QT.qmlproject.qtds  QT.qrc  main.cpp
QT/QT/: Constants.qml  qmldir
QT/QTContent/: App.qml  BookEditor.qml  MainWindow.qml  ModeDialog.qml  Screen01.ui.qml
QT/bridge/: bridge.cpp  bridge.h
rust/src/: lib.rs
